objects/rh2__PS_Exception__c.object
<CustomObject>
    <fields>
        <fullName>rh2__Exception_Stack_Trace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Number_of_Occurrences__c</fullName>
        <label>Number of Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Object__c</fullName>
        <inlineHelpText>The object that experienced the Rollup Helper exception.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Id__c</fullName>
        <inlineHelpText>The ID of the record that experienced an exception.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Link__c</fullName>
        <formula>HYPERLINK( rh2__Record_Id__c, rh2__Record_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Link__c</fullName>
        <formula>IF(!ISBLANK(rh2__Rollup_Name__c), HYPERLINK(&quot;/apex/PS_RollupType?s=&quot; &amp;  rh2__Rollup_Name__c, &quot;Link to the Rollup&quot;), &apos;No rollup link available.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rollup Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Name__c</fullName>
        <description>The name of the rollup setting that caused the error.</description>
        <label>Rollup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rollup Helper Exception</label>
    <nameField>
        <displayFormat>Exception #{00000}</displayFormat>
        <label>Rollup Helper Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Helper Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>